--- a/overview/core-concepts-architecture/architecture-diagram.mdx
+++ b/overview/core-concepts-architecture/architecture-diagram.mdx
@@ -1,134 +1,156 @@
 ---
-title: "System Architecture Overview"
-description: "Explore a high-level architecture diagram of GoogleTest, illustrating component relationships such as test runners, assertion APIs, mocking infrastructure, and their supporting utilities. This visual guide will help you understand the data flow and extensibility points within the system."
+title: "How GoogleTest Works (Architecture Diagram)"
+description: "Visualize the main components of GoogleTest and their relationships: test discovery, fixtures, assertions, result reporting, and the optional GoogleMock integration layer. A mermaid diagram illustrates the data flow and the role of key files."
 ---
 
-# System Architecture Overview
+# How GoogleTest Works (Architecture Diagram)
 
-Explore a high-level architecture diagram of GoogleTest, illustrating component relationships such as test runners, assertion APIs, mocking infrastructure, and their supporting utilities. This visual guide will help you understand the data flow and extensibility points within the system.
+## Visualizing the Core Architecture
+
+This page provides a clear visualization of the main components within GoogleTest and their interplay. It maps out key elements such as test discovery, fixtures, assertions, result reporting, and how GoogleMock integrates optionally, helping you understand the flow and responsibilities of each part.
 
 ---
 
-## Introduction
+## What You Will Learn Here
 
-The System Architecture Overview provides a visual and conceptual roadmap of how GoogleTest operates internally to offer its powerful testing and mocking capabilities. Understanding the interactions between core components like the test runner, assertion API, and mocking framework enables users to appreciate how GoogleTest processes tests, executes assertions, and allows extensibility.
+- How GoogleTest discovers and organizes test cases.
+- The role and lifecycle of test fixtures.
+- How assertions are evaluated and propagated.
+- How test results are collected and reported.
+- The optional integration and layering of GoogleMock for mocking within tests.
+- An architectural diagram that illustrates data flow and key files.
 
-Whether you are integrating GoogleTest into complex projects or exploring its extensibility points, this guide illustrates the critical components working together behind the scenes.
+---
 
-## Architectural Components
+## Understanding GoogleTest's Architecture
 
-### Test Runner
-- **Role:** Orchestrates test discovery, execution, and reporting.
-- **Workflow:** Loads test cases, invokes test methods, and aggregates results.
-- **User Impact:** Enables running tests selectively or in bulk, with detailed progress and failures.
+At its core, GoogleTest structures the testing process as a clear flow from test discovery to execution and reporting:
 
-### Assertion API
-- **Role:** Provides expressive assertion macros for validating conditions.
-- **Capabilities:** Supports various types of assertions - fatal, non-fatal, and parameterized.
-- **User Benefits:** Immediate feedback on test failures with informative messages and stack traces.
+1. **Test Discovery:** GoogleTest automatically locates test cases within your codebase by scanning for tests defined with its macros (`TEST` and `TEST_F`).
 
-### Mocking Infrastructure
-- **Role:** Facilitates creation of mock objects and expectations.
-- **Key Features:**
-  - Declarative macros to define mock methods in user classes.
-  - Support for setting expectations about method calls and their sequence.
-  - Configurable strictness modes for handling unanticipated method calls.
-- **User Advantage:** Precise control over dependency interactions in tests.
+2. **Test Fixtures:** These set up and tear down the environment needed for tests, ensuring isolated and repeatable test scenarios.
 
-### Assertion and Mock Utilities
-- **Supporting Components:** Include matchers, actions, default values, and call expectations.
-- **Functionality:** Enable flexible argument matching, complex behaviors, and default return values.
-- **Extensibility:** Users can extend with custom matchers and actions to suit specific testing needs.
+3. **Assertions:** Assertions validate conditions within your tests. When an assertion fails, GoogleTest captures the failure and controls test flow accordingly.
 
-### Core Testing APIs
-- Foundation for writing and structuring tests, handling fixtures, and grouping test cases.
+4. **Result Reporting:** After running tests, GoogleTest collects results and outputs detailed reports, enabling efficient debugging and verification.
 
-## Data Flow Overview
+5. **GoogleMock Integration:** Optional mocking support is layered on top of the architecture, allowing you to create mock objects, specify expectations, and verify interactions in your unit tests seamlessly.
 
-The diagram below illustrates the flow from test discovery through execution to result reporting, highlighting how mock objects and assertions interplay within this flow.
+This modular breakdown helps simplify test management while providing powerful capabilities.
+
+---
+
+## Architecture Diagram
 
 ```mermaid
 flowchart TD
+  %% Core Components
+  TestDiscovery["Test Discovery (TEST, TEST_F)"]
+  FixtureSetup["Test Fixtures (Setup & Teardown)"]
+  TestExecution["Test Execution Engine"]
+  Assertions["Assertions & Failure Handling"]
+  ResultCollection["Test Result Collection & Reporting"]
 
-  TR[Test Runner]
-  AP[Assertion API]
-  MI[Mocking Infrastructure]
-  AU[Assertion and Mocking Utilities]
-  CTA[Core Testing APIs]
-  RE[Result & Report Generation]
+  %% Optional Layer
+  GoogleMockLayer["GoogleMock Integration Layer"]
 
-  subgraph "Test Execution Flow"
-    TR --> CTA
-    CTA --> AP
-    CTA --> MI
-    AP --> RE
-    MI --> AU
-    AU --> AP
+  %% Key Files Indication
+  KeyFiles["Key Source Files: gtest.h, gtest.cc, gmock.h, gmock.cc"]
+
+  %% Relationships
+  TestDiscovery --> FixtureSetup
+  FixtureSetup --> TestExecution
+  TestExecution --> Assertions
+  Assertions --> ResultCollection
+  GoogleMockLayer -.-> TestExecution
+  GoogleMockLayer -.-> Assertions
+
+  %% Labels
+  classDef optional fill:#f9f,stroke:#333,stroke-dasharray: 5 5;
+  class GoogleMockLayer optional;
+
+  %% Grouping
+  subgraph GoogleTest Core
+    TestDiscovery
+    FixtureSetup
+    TestExecution
+    Assertions
+    ResultCollection
   end
 
-  subgraph "User Interaction"
-    UI[User Test Code] --> TR
-    UI --> MI
-    UI --> AP
+  subgraph "Key Code Files"
+    KeyFiles
   end
-
-  RE --> UI
-
-  %% Annotations
-  classDef component fill:#f0f9ff,stroke:#1a73e8,stroke-width:2px;
-  class TR,AP,MI,AU,CTA,RE component;
 
 ```
 
-This flow depicts:
+---
 
-- The user's test code initiates tests through the Test Runner.
-- The Test Runner interacts with core testing APIs to execute test fixtures and cases.
-- During test execution, assertions and mocks intercept calls to validate behavior.
-- Mocking infrastructure leverages utilities for matching arguments and defining actions.
-- Assertions and mocks report results back to the runner, which generates reports.
+## How to Interpret This Diagram
 
-## Extensibility Points
+- **Sequential Flow:** Testing begins with discovering your tests, followed by setting up fixtures.
 
-GoogleTest's architecture allows users to extend and customize:
+- **Execution and Assertion:** Each test runs, performing assertions that validate code behavior.
 
-- **Custom Matchers:** Implement complex argument verification beyond built-ins.
-- **Actions:** Define specific behaviors mock methods should perform.
-- **Strictness Modes:** Choose between nice, naggy, or strict mocks to control test sensitivity.
-- **Sequences & Expectations:** Orchestrate call order and dependencies among mocks.
+- **Reporting:** After execution, results are accumulated and presented clearly for analysis.
 
-Users can plug into the mocking utilities to tailor test doubles to complex scenarios.
+- **Mocking Layer:** GoogleMock sits optionally on top, allowing detailed control and verification of interactions in your tests without disturbing the core test flow.
+
+- **Key Source Files:** The core implementation resides mainly in the `gtest` and `gmock` headers and source files.
+
+---
+
+## Practical Example: Running a Test Suite
+
+Imagine you have a set of unit tests for a class `Calculator`. Here's what happens under the hood:
+
+- GoogleTest locates all your defined tests via `TEST` macros.
+- For any test that uses a fixture (`TEST_F`), it automatically calls the fixture setup code.
+- The test runs and assertions check the returned results from your code.
+- If any assertion fails, GoogleTest captures it and continues or aborts based on failure severity.
+- Results from every test are collected.
+- Finally, GoogleTest outputs a summary and detailed report.
+- If you use mocks, GoogleMock verifies expected interactions during execution.
+
+---
 
 ## Best Practices & Tips
 
-- Use the test runner's selective test execution to scope large test suites.
-- Leverage mocking strictness modes to balance between test maintainability and strict validation.
-- Utilize assertion and mocking utilities progressively, starting simple.
-- Reference the [Mocking Reference](../api-reference/mocking-framework/defining-mocks) and [gMock Cookbook](../guides/core-workflows/mocking-best-practices) for deep dives into mocking workflows.
+- **Design Tests with Fixtures:** Use fixtures (`TEST_F`) to reduce duplication and manage test setup and cleanup precisely.
+- **Leverage Assertions Wisely:** Choose the right assertion macros to express your expectations clearly.
+- **Use GoogleMock for Dependencies:** When your tests depend on external components or complex behavior, integrate GoogleMock to simulate and verify interactions.
+- **Monitor Test Reports:** Regularly review GoogleTest's detailed reports to quickly identify failures and unexpected behaviors.
 
-## Troubleshooting Common Issues
+---
 
-- **Unexpected Mock Calls:** Use strict mocks or enable verbose output to identify unexpected interactions.
-- **Test Discovery Problems:** Verify the test runner configurations and naming conventions.
-- **Assertion Failures:** Examine stack traces and error messages generated through the assertion API.
+## Troubleshooting
+
+- **Test Discovery Not Working:** Ensure you have properly defined tests with `TEST` or `TEST_F` macros.
+- **Fixture Setup Not Running:** Confirm that your test uses the fixture syntax `TEST_F` and that the setup methods are correctly overridden.
+- **Unexpected Assertion Failures:** Check the test logic and ensure assertions match expected conditions.
+- **GoogleMock Expectations Not Met:** Make sure `EXPECT_CALL` statements precede code execution and that your mocks are correctly configured.
+
+---
 
 ## Next Steps
 
-After familiarizing yourself with this architecture overview, explore:
+After understanding how GoogleTest works and its architecture:
 
-- [Core Concepts & Terminology](./core-concepts-terminology) to understand fundamental definitions.
-- [Defining Mock Objects](../api-reference/mocking-framework/defining-mocks) to master mocking basics.
-- [Writing and Running Your First Test](../../getting-started/configuration-validation/first-test) to put theory into action.
-
----
-
-### References
-
-- [Mocking Reference](../docs/reference/mocking.md) for detailed mocking constructs.
-- [gMock Cookbook](../docs/gmock_cook_book.md) for practical usage patterns.
-- [gMock Cheat Sheet](../docs/gmock_cheat_sheet.md) for quick syntax reminders.
-
+- Explore the **[Fundamental Concepts & Terminology](../core-concepts-architecture/core-terminology)** page to deepen your knowledge of core testing principles.
+- Learn about **[Platform Support, Integrations & Dependencies](../core-concepts-architecture/integration-dependencies)** for adapting GoogleTest to your environment.
+- Dive into **[Writing Your First Test Case](../../getting-started/first-test-experience/writing-your-first-test)** to see practical usage.
 
 ---
 
-Explore and experiment with GoogleTest's components through this architectural lens to gain confidence in managing testing complexity and unlocking GoogleTest's full potential.
+## Additional Resources
+
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) — A comprehensive starting point.
+- [GoogleMock Cookbook](https://github.com/google/googletest/blob/main/docs/gmock_cook_book.md) — Practical recipes to get the most from GoogleMock.
+- [API Reference for Core Testing](../../api-reference/core-testing-apis) — Detailed specs of GoogleTest APIs.
+
+---
+
+Understanding the architecture helps you use GoogleTest and GoogleMock effectively, build reliable test suites, and improve code quality with confidence.
+
+
+---
